apps/ex4/webdic-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webdic-svc
  name: webdic-svc
  namespace: apps
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webdic
  type: ClusterIP
status:
  loadBalancer: {}
