apps/ex4/webdic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdic-ingress
  namespace: apps
spec:
  rules:
  - host: leal.webdic.com
    http:
      paths:
      - backend:
          service:
            name: webdic-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
